--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -5,13 +5,14 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: #000000c5;
+  border-right: 2px solid #92a1ab;
   overflow-x: hidden;
   padding-top: 20px;
 }
 
 .pages {
-  font-size: 30px;
+  font-size: 40px;
   color: #818181;
   display: flex;
 }
@@ -21,12 +22,15 @@
 }
 
 .pages ul li {
-  margin-top: 5rem;
+  margin-top: 7rem;
   text-align: center;
-}
+  transition: color 0.3s;
 
-.sidenav a:hover {
-  color: #f1f1f1;
+  &:hover {
+    color: #740000;
+    text-shadow: 2px 5px 4px rgba(255, 255, 255, 0.5);
+    cursor: pointer;
+  }
 }
 
 .social {
